--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   rel="stylesheet"
 />
     <link rel="stylesheet" href="styles.css">
-    <title>Aluraflix</title>
+    <title>Guiminamflix</title>
 </head>
 
 <body>
-    <header>ALURAFLIX</header>
+    <header>GUIMINAMFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
